--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ function MM_swapImage() { //v3.0
 </script>
 </head>
 
-<body onLoad="MM_preloadImages('imagenes/imagen1.jpg','imagenes/popo2.jpg','imagenes/imagen8.jpg','imagenes/imagen12.jpg','imagenes/imagen16.jpg','imagenes/imagenescolima3.jpg')">
+<body onLoad="MM_preloadImages('imagenes/imagen1.jpg','imagenes/popo2.jpg','imagenes/imagen8.jpg','imagenes/imagen12.jpg','imagenes/imagen16.jpg','imagenes/imagenescolima3.jpg','imagenes/colima.jpg','imagenes/colima5.jpg')">
 <div data-role="page" id="principal" data-theme="c">
  <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
   <h1>Los volcanes de Popocatepetl y el de Colima  </h1>
@@ -298,9 +298,8 @@ erupción en proceso con apenas emisión de cenizas (especificar la altura de la
   </div>
   <div data-role="content" align="center">
    <div>
-     <p>gggrgrtryhtytuytuytu
-     trytytuytuytu
-     htrutyiuyoiuoipip</p>
+     <p>El volcán de Fuego de Colima, (3860 m. sobre el nivel del mar) es un estratovolcán andesítico que forma parte, junto con el Nevado de Colima (4330 msnm.), de un complejo volcánico situado en el Cinturón Neovolcánico Mexicano y cuyas coordenadas geográficas (19º30'44''N y 103º37'02''W) lo sitúan entre los Estados de Colima (municipios de Comala y Cuauhtémoc) y Jalisco (municipios de Tuxpan, Zapotitlán y Tonila.</p>
+     <p><img src="imagenes/volcancolima1.jpg" width="700" height="400"></p>
   </div>
   </div>
   <div data-role="footer" data-theme="c">
@@ -317,9 +316,12 @@ erupción en proceso con apenas emisión de cenizas (especificar la altura de la
   </div>
   <div data-role="content" align="center">
    <div>
-     <p>htjrtiyiuypouypuggffghhg
-     hvjhgghghghhghgghghghggghhhh
-     hfggggggggggggggggggggggggdf</p>
+     <p>Este material cuenta con derechos de propiedad intelectual. De no existir previa autorización por escrito de EL UNIVERSAL, Compañía Periodística Nacional S. A. de C. V., queda expresamente prohibida la publicación, retransmisión, distribución, venta, edición y cualquier otro uso de los contenidos (Incluyendo, pero no limitado a, contenido, texto, fotografías, audios, videos y logotipos). Si desea hacer uso de este contenido por favor comuníquese a la Agencia de Noticias de El Universal, al 57091313 extensión 2425. Muchas gracias.</p>
+     <div data-role="collapsible" data-content-theme="c">
+     <h1>VOLCAN COLIMA</h1>
+     <p>Autoridades mantienen el semáforo de alerta volcánica en fase preventiva ante las expulsiones permanentes de lava, humo, gas y ceniza que presenta el volcán de Colima.</p>
+     <p><img src="imagenes/fasecolima.jpg" width="500" height="300"></p>
+     </div>
   </div>
   </div>
   <div data-role="footer" data-theme="c">
@@ -334,17 +336,18 @@ erupción en proceso con apenas emisión de cenizas (especificar la altura de la
    <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
       <h1>Medidas Preventivas en caso de caida de ceniza y en caso de erupcion</h1>
  </div>
- <div data-role="content" align="center">
+ <div data-role="content" align="left">
     <div>
           <H2><CENTER>MEDIDAS PREVENTIVAS EN CASO DE CAIDA DE CENIZA</CENTER></H2>
-     <li>No humedecer la ceniza a fin de evitar taponamientos en el sistema de alcantarillado</li>
-     <li>Mantén la calma.</li>
-     <li>Utiliza medios electrónicos y de comunicación para obtener información confiable que den las autoridades de Protección Civil sobre la caída de ceniza y atiende siempre sus instrucciones</li>
-     <li>No realices actividades al aire libre y si es posible no salgas.</li>
-     <li>Cierra puertas y ventanas y coloca toallas o trapos húmedos en las rendijas.</li>
-      <p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image7','','imagenes/imagen12.jpg',1)"><img src="imagenes/imagen11.jpg" width="272" height="185" id="Image7"></a></p> 
-      <li>Si es posible no conduzcas, si tienes que hacerlo, hazlo a baja velocidad y con las luces encendidas, ya que la ceniza dificulta la visibilidad y provoca que el pavimento se vuelva resbaloso.</li>
-    <li>Durante la caída de ceniza volcánica, evita que los menores realicen actividades al aire libre.</li>
+     <li>Cubrir nariz y boca con un pañuelo húmedo o cubre boca</li>
+     <li>Limpiar ojos y garganta con agua pura</li>
+     <li>Utilizar lentes de armazón y evita los lentes de contacto para reducir la irritación ocular</li>
+     <li>Cerrar ventanas o cubrirlas y permanecer lo más posible dentro de la casa.</li>
+     <li>Limpiar la ceniza acumulada en edificios, suministros de agua y aire, canales, bajadas de las aguas, techos, azoteas, patios y calles. Depositarlas en bolsas y evitar que se vaya al drenaje.</li>
+       
+      <li>Reducir el uso del automóvil ya que conducir sobre ceniza es peligroso para usted y su auto.</li>
+    <li>Cubrir los depósitos de agua y alimentos que consume el ganado.</li>
+      <div align="center"><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image23','','imagenes/colima.jpg',1)"><img src="imagenes/colima4.jpg" width="281" height="179" id="Image23"></a></div>
     </div>
   </div>
   <div data-role="main" class="ui-content">
@@ -356,61 +359,34 @@ erupción en proceso con apenas emisión de cenizas (especificar la altura de la
   <br>
   </div>
   <div>
-  <img src="imagenes/imagen14.jpg" width="50%" height="50%"> </div>
+  <img src="imagenes/colima6.jpg" width="50%" height="50%"> </div>
   </div>
   </div>
   <h2><CENTER>MEDIDAS PREVENTIVAS EN CASO DE ERUPCION</CENTER></h2>
-   <h2><center>MEDIDAS PREVENTIVAS ANTES DE QUE EL VOLCAN HAGA ERUPCION</center></h2>
-<li>Infórmate si tu vivienda, sitio donde trabajas o estudias está en zona de peligro en caso de erupción</li>
-<li>Discute con tu familia, amigos y vecinos sobre lo que podrían hacer frente a los diferentes peligros volcánicos, es decir armar un plan de contingencia.</li>
-<li>Participa en simulacros programados por autoridades para poner a prueba tu plan de contingencia</li>
-<li>Si tienes cualquier duda sobre los peligros volcánicos, pide ayuda a los expertos del Instituto Geofísico.</li>
-  <center><img src="imagenes/imagen15.jpg" width="50%" height="50%"></center>
-  <h4><center>CUANDO UN VOLCAN VA A HACER ERUPCION</center></h4>
-  <LI>Revisa tu plan de contingencia</LI>
-  <LI>No creer rumores o  información proporcionada por gente no autorizada</LI>
-  <LI>Preparar un kit de emergencia: radio portátil, linterna con pilas, botiquín, agua embotellada, alimentos que puedan consumirse sin cocinar, abrelatas/cuchillo, copias de tus documentos, lista de teléfonos importantes</LI>
-<LI>Trata de mantenerte cerca de tu familia.</LI>
-<LI>Preocuparte por tu buen estado y seguridad, ya que solo entonces podrás brindar ayuda efectiva a los demás.</LI>
-<LI>
-  <div align="center"><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image12','','imagenes/imagen16.jpg',1)"><img src="imagenes/imagen17.jpg" width="299" height="168" id="Image12"></a></div>
-</LI>
+   <h2><center>MEDIDAS PREVENTIVAS DURANTE UNA ERUPCION VOLCANICA</center></h2>
+<li>Ante todo conserva la calma; el pánico puede producir más víctimas que el fenómeno natural. Reúne rápidamente a tu familia, especialmente a los niños y ancianos, quienes son las personas más vulnerables en estos momentos. Lo más importante es tu vida, toma únicamente tus objetos personales.</li>
+<li>Cierra las llaves de agua y gas, desconecta la luz y asegúrate de cerrar bien puertas y ventanas, y cumplir con los planes de emergencia acordados. Mantén la radio encendida para recibir la información que transmitan las autoridades correspondientes.</li>
+<li>Si estás fuera de casa no intentes ingresar a la zona de riesgo, desplázate hacia lugares alejados del volcán; aléjate de valles y ríos por donde puedan bajar flujos de ceniza y rocas calientes, lava, lodo y emanaciones de gases. Procura no estar cerca de terrenos que hayan sufrido derrumbes. Si la ceniza volcánica comienza a caer, pon en práctica las siguientes recomendaciones:</li>
+ <P>Busca refugio bajo techo y permanezca allí hasta que el fenómeno haya pasado</P>
+ <P>Respira a través de una tela humedecida en agua o vinagre, esto evitará el paso de los gases y el polvo volcánico</P>
+ <P>Protege tus ojos cerrándolos tanto como sea posible y cúbrete con un sombrero y ropas gruesas</P>
+ <P>- En caso de una fuerte lluvia de ceniza no utilices el vehículo. La única protección contra la lluvia de ceniza y material volcánico de tamaño considerable son los refugios y techos reforzados</P>
+ <P>Debido a que las explosiones del volcán pueden causar ondas de aire o de choque que pueden romper los vidrios de las ventanas, coloca cintas adhesivas en forma de X, o en último caso, pon tablas que impidan la caída violenta de los mismos.</P>
+ <P>Si fuiste evacuado y te encuentras en un albergue, mantén la calma; allí recibirás alimentos, atención médica, información y podrás participar en las labores de mantenimiento del mismo</P>
+  <center><img src="imagenes/colima.jpg" width="50%" height="50%"></center>
+  <h4><center>DESPUÉS DE UNA ERUPCION VOLCANICA</center></h4>
+  <LI>Permanece en el sitio seguro hasta que las autoridades informen que ha vuelto la normalidad. ¡No trates de regresar antes a tu hogar! Mantén en sintonía tu radio para recibir instrucciones. Antes de entrar a su casa, revisa que no se ha quedado debilitada por la erupción.</LI>
+  <LI>Evita hacer uso de líneas telefónicas, caminos, transportes, servicios médicos y hospitalarios si no es estrictamente necesario. Retira la acumulación de material volcánico caído sobre los techos para evitar que éstos se derrumben. Este riesgo crece si se presentan lluvias porque el agua aumenta el peso de los materiales sobre los techos (un metro cúbico de ceniza húmeda puede llegar a pesar más de una tonelada).</LI>
+<LI>No comas ni bebas alimentos que puedan estar contaminados.</LI>
+
+  <p align="center"><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image23','','imagenes/colima5.jpg',1)"><img src="imagenes/colima4.jpg" width="281" height="179" id="Image2"></a></p>
   <div data-role="main" class="ui-content">
     <div data-role="collapsible" data-content-theme="false">
-  <h1>INFORMACION ACERCA DE LAS FASES DEL VOLCAN POPOCATEPETL</h1>
+  <h1>IMAGENES</h1>
   <div>
-  <p>Esta es alguna informacion sobre las fases:
-  <H2><CENTER>El color amarillo se divide en tres fases:</CENTER><H2>
-  <p>FASE 1: </p>
-  <p>asfdsgdfghrththtytyjuyjyjyujyjyjty </p
-  ><P>FASE 2 </P>
-  <p>bbjhghghfghvghvghvg</p>
-  <P>FASE 3 </P>
-  <p>hjgbjhgghvgcgcvg</p>
-  <H2>
-  <img src="imagenes/fase1.jpg" width="45%" height="50%" align="middle">
-  <CENTER>
-    El color rojo se divide en tres fases:</CENTER><H2>
-  <p> fase 1 </p>
-  <p>hbjvgcfgcfcfc</p>
-  <p> fase 2 </p>
-  <p>hbvgcfgcfgcfcfcf</p>
-  <p>bhjbhgfvghvghvgcgfcfg</p>
-  <p> fase 3 </p>
-  <p>jhghgvghvgvg</p>
-  <img src="imagenes/fase2.jpg" width="50%" height="50%"> 
-  <H2><CENTER>El color verde se divide en tres fases:</CENTER><H2>
-  <p> fase 1 </p>
-  <p>hjbhvbvbnbhggghggh </p>
-  <p> fase 2 </p>
-  <p>bhgfhvcvbcvb</p>
-  <p> fase 3 </p>
-  <p>bhhbghhhhhhhhhhhhh</p>
-  <br>
+  <p>Esta son algunas de las imagenes de la caida de ceniza y erupcion volcanica:  
+  <p><img src="imagenes/colima.jpg" width="495" height="252" longdesc="imagenes/colima.jpg"><img src="imagenes/colima2.jpg" width="349" height="201" longdesc="imagenes/colima2.jpg" align="top"><br>
   </div>
-  <div>
-  <CENTER>
-  <img src="imagenes/fases.png" width="56%" height="50%"> </CENTER> </div>
   </div>
 </div>
  <div data-role="footer" data-theme="c">
