--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ erupción en proceso con apenas emisión de cenizas (especificar la altura de la
 </div>
  <div data-role="footer" data-theme="c">
      <h4>APLICACION 3</h4>
-     <h4>VOLCAN POPOCATEPETL</h4>
+     <h4>VOLCAN COLIMA</h4>
      <h4>TMM</h4>
   </div>
 </div>
