--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ erupción en proceso con apenas emisión de cenizas (especificar la altura de la
   </div>
 </div>
  <div data-role="footer" data-theme="c">
-     <h4>APLICACION 3</h4>
+     <h4>APLICACION TRES</h4>
      <h4>VOLCAN POPOCATEPETL</h4>
      <h4>TMM</h4>
   </div>
