--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ El cráter en la parte más ancha mide 612 m. y en la más angosta 400 m. Tiene 
 <div data-role="page" id="Pagina3" data-add-back-btn="true" data-theme="c">
  <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
     <h1>Dependencias del monitoreo del volcan popocatepetl</h1>
- </div>s	
+ </div>	
  <div data-role="content" align="center">
    <div>
       <p>En las últimas 24 horas, por medio de los registros sísmicos del sistema de monitoreo del volcán Popocatépetl, se identificaron 88 exhalaciones de muy baja intensidad, que solo fueron acompañadas por emisiones de vapor de agua y gases.</p>
@@ -390,7 +390,7 @@ erupción en proceso con apenas emisión de cenizas (especificar la altura de la
   </div>
 </div>
  <div data-role="footer" data-theme="c">
-     <h4>APLICACION TRES</h4>
+     <h4>APLICACION 3</h4>
      <h4>VOLCAN POPOCATEPETL</h4>
      <h4>TMM</h4>
   </div>
