--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@ El cráter en la parte más ancha mide 612 m. y en la más angosta 400 m. Tiene 
       <p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image5','','imagenes/imagen8.jpg',1)"><img src="imagenes/imagen7.jpg" width="478" height="292" id="Image5"></a></p>
       <p>Durante la noche se observó ligera incandescencia sobre el cráter, que aumentaba al momento de las exhalaciones más importantes. 
         Desde hoy por la mañana y hasta el momento de este reporte se ha observado una ligera emisión de vapor de agua y gas, que los vientos dispersan al este.</p>
-        <img src="imagenes/imagen9.jpg" width="50%" height="50%">
-        <p>Dar Click para la pagina de Cenapred: <a href="http://www.cenapred.unam.mx/es/">http://www.cenapred.unam.mx/es/</a></p> 
+        <img src="imagenes/imagen9.jpg" width="29%" height="45%">
+      <p>Dar Click para la pagina de Cenapred: <a href="http://www.cenapred.unam.mx/es/">http://www.cenapred.unam.mx/es/</a>         
    </div>
  </div>
  <div data-role="main" class="ui-content">
@@ -299,7 +299,7 @@ erupción en proceso con apenas emisión de cenizas (especificar la altura de la
   <div data-role="content" align="center">
    <div>
      <p>El volcán de Fuego de Colima, (3860 m. sobre el nivel del mar) es un estratovolcán andesítico que forma parte, junto con el Nevado de Colima (4330 msnm.), de un complejo volcánico situado en el Cinturón Neovolcánico Mexicano y cuyas coordenadas geográficas (19º30'44''N y 103º37'02''W) lo sitúan entre los Estados de Colima (municipios de Comala y Cuauhtémoc) y Jalisco (municipios de Tuxpan, Zapotitlán y Tonila.</p>
-     <p><img src="imagenes/volcancolima1.jpg" width="700" height="400"></p>
+     <p><img src="imagenes/volcancolima1.jpg" width="514" height="325"></p>
   </div>
   </div>
   <div data-role="footer" data-theme="c">
@@ -320,7 +320,7 @@ erupción en proceso con apenas emisión de cenizas (especificar la altura de la
      <div data-role="collapsible" data-content-theme="c">
      <h1>VOLCAN COLIMA</h1>
      <p>Autoridades mantienen el semáforo de alerta volcánica en fase preventiva ante las expulsiones permanentes de lava, humo, gas y ceniza que presenta el volcán de Colima.</p>
-     <p><img src="imagenes/fasecolima.jpg" width="500" height="300"></p>
+     <p><img src="imagenes/fasecolima.jpg" width="389" height="246"></p>
      </div>
   </div>
   </div>
