--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ erupción en proceso con apenas emisión de cenizas (especificar la altura de la
      </div>
  </div>
  <div data-role="footer" data-theme="c">
-    <h4>APLICACION 3</h4>
+    <h4>APLICACION TRES</h4>
     <H4>VOLCAN POPOCATEPETL</H4>
     <H4>TMM</H4>
   </div>
