--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ El cráter en la parte más ancha mide 612 m. y en la más angosta 400 m. Tiene 
       <p>Durante la noche se observó ligera incandescencia sobre el cráter, que aumentaba al momento de las exhalaciones más importantes. 
         Desde hoy por la mañana y hasta el momento de este reporte se ha observado una ligera emisión de vapor de agua y gas, que los vientos dispersan al este.</p>
       <a href="http://www.cenapred.unam.mx/es/"><img src="imagenes/imagen9.jpg" width="29%" height="45%"></a>
-      <p>Dar Click para la pagina de Cenapred: <a href="http://www.cenapred.unam.mx/es/">http://www.cenapred.unam.mx/es/</a>         
+      <p>Dar Click para la pagina de Cenapred: <a href="http://www.cenapred.unam.mx/es/">http://www.cenapred.unam.mx/es/</a></p>         
    </div>
  </div>
  <div data-role="main" class="ui-content">
