--- a/index.html
+++ b/index.html
@@ -163,11 +163,13 @@ El cráter en la parte más ancha mide 612 m. y en la más angosta 400 m. Tiene 
       <p>En las últimas 24 horas, por medio de los registros sísmicos del sistema de monitoreo del volcán Popocatépetl, se identificaron 88 exhalaciones de muy baja intensidad, que solo fueron acompañadas por emisiones de vapor de agua y gases.</p>
       <p><a href="http://www.cenapred.unam.mx/es/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image5','','imagenes/imagen8.jpg',1)"><img src="imagenes/imagen7.jpg" width="478" height="292" id="Image5"></a></p>
       <p>Durante la noche se observó ligera incandescencia sobre el cráter, que aumentaba al momento de las exhalaciones más importantes. 
-        Desde hoy por la mañana y hasta el momento de este reporte se ha observado una ligera emisión de vapor de agua y gas, que los vientos dispersan al este.</p>
-      <a href="http://www.cenapred.unam.mx/es/"><img src="imagenes/imagen9.png" width="29%" height="45%"></a>
-      <p>Dar Click para la pagina de Cenapred: <a href="http://www.cenapred.unam.mx/es/">http://www.cenapred.unam.mx/es/</a></p>         
+        Desde hoy por la mañana y hasta el momento de este reporte se ha observado una ligera emisión de vapor de agua y gas, que los vientos dispersan al este.</p>      
    </div>
  </div>
+ <div>
+ <a href="http://www.cenapred.unam.mx/es/"><img src="imagenes/imagen9.png" width="29%" height="45%"></a>
+      <p>Dar Click para la pagina de Cenapred: <a href="http://www.cenapred.unam.mx/es/">http://www.cenapred.unam.mx/es/</a></p>   
+      </div>
  <div data-role="main" class="ui-content">
   <div data-role="collapsible" data-content-theme="false">
   <h1>VOLCAN POPOCATEPETL</h1>
