--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ erupción en proceso con apenas emisión de cenizas (especificar la altura de la
      <div data-role="collapsible" data-content-theme="c">
      <h1>VOLCAN COLIMA</h1>
      <p>Autoridades mantienen el semáforo de alerta volcánica en fase preventiva ante las expulsiones permanentes de lava, humo, gas y ceniza que presenta el volcán de Colima.</p>
-     <p><img src="imagenes/fasecolima.jpg" width="389" height="246"></p>
+     <p><a href="http://www.cenapred.unam.mx/es/"><img src="imagenes/fasecolima.jpg" width="389" height="246"></a></p>
      </div>
   </div>
   </div>
