--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ El cráter en la parte más ancha mide 612 m. y en la más angosta 400 m. Tiene 
      <li>Utiliza medios electrónicos y de comunicación para obtener información confiable que den las autoridades de Protección Civil sobre la caída de ceniza y atiende siempre sus instrucciones</li>
      <li>No realices actividades al aire libre y si es posible no salgas.</li>
      <li>Cierra puertas y ventanas y coloca toallas o trapos húmedos en las rendijas.</li></left>
-      <p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image7','','imagenes/imagen12.jpg',1)"><img src="imagenes/imagen11.jpg" width="272" height="185" id="Image7"></a></p>
+      <p><a href="http://www.cenapred.unam.mx/es/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image7','','imagenes/imagen12.jpg',1)"><img src="imagenes/imagen11.jpg" width="272" height="185" id="Image7"></a></p>
      <letf> <li>Si es posible no conduzcas, si tienes que hacerlo, hazlo a baja velocidad y con las luces encendidas, ya que la ceniza dificulta la visibilidad y provoca que el pavimento se vuelva resbaloso.</li>
     <li>Durante la caída de ceniza volcánica, evita que los menores realicen actividades al aire libre.</li></left>
     </div>
